# llm-observability-suite

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
audio/: vad_gate.py
compass_agent/: cli.py
llm_observability/: __init__.py  core.py  db_logger.py
llm_observability_suite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core_logging.py  test_db_logger.py  test_metrics.py  test_vad_gate.py
